@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix limiting rows when connecting to Microsoft Access (jeremyevans)
+
 * Add Database#views for getting an array of symbols of view names for the database (jeremyevans, christian.michon)
 
 * Make Datbase#tables no longer include view names on MySQL (jeremyevans)
